[metadata]
name = schengulator-phow
version = 0.0.1
author = Penelope How
author_email = pennyruthhow@gmail.com
description = A tool to calculate how many days an individual has been in Schengen countries out of a specified 180-day period
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PennyHow/schengulator
project_urls =
    Documentation = https://readthedocs.io/schengulator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Operating System :: OS Independent
[options]
package_dir =
    = schengulator
packages = find:
python_requires = >=3.6

[options.packages.find]
where = schengulator

